...
          "stringUnit" : {
            "state" : "translated",
            "value" : "View"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Project"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "File"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Imported"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Import from Alethe (Tauri)…"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "New Terminal…"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "New Todo"
          }
        },
...
      }
    },
    "newTerminal.folder" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "newTerminal.prompt" : {
      "extractionState" : "manual",
      "localizations" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close Terminal"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reset"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Focus in Pomodoro"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete Group"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Move to Group"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "No Group"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close Sub-tab"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hide Sub-tabs"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Show Sub-tabs"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Terminated with a double ⌃C."
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Edit Tags"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reset to Default List"
          }
        },
...
